borsh-derive/src/snapshots/borsh_derive__enum_schema__tests__check_with_funcs_skip_conflict.snap
---
source: borsh-derive/src/enum_schema.rs
expression: actual.unwrap_err()
---
Error(
    "`borsh_skip` cannot be used at the same time as `schema(with_funcs(...))`",
)
