borsh-derive/src/snapshots/borsh_derive__enum_schema__tests__complex_enum.snap
---
source: borsh-derive/src/enum_schema.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::BorshSchema for A {
    fn declaration() -> borsh::schema::Declaration {
        "A".to_string()
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        struct ABacon;
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        struct AEggs;
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        struct ASalad(Tomatoes, Cucumber, Oil);
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        struct ASausage {
            wrapper: Wrapper,
            filling: Filling,
        }
        <ABacon as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <AEggs as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <ASalad as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <ASausage as borsh::BorshSchema>::add_definitions_recursively(definitions);
        let variants = borsh::__private::maybestd::vec![
            ("Bacon".to_string(), < ABacon > ::declaration()), ("Eggs".to_string(), <
            AEggs > ::declaration()), ("Salad".to_string(), < ASalad > ::declaration()),
            ("Sausage".to_string(), < ASausage > ::declaration())
        ];
        let definition = borsh::schema::Definition::Enum {
            variants,
        };
        Self::add_definition(Self::declaration(), definition, definitions);
    }
}

