borsh-derive/src/snapshots/borsh_derive__enum_schema__tests__complex_enum_generics_borsh_skip_tuple_field.snap
---
source: borsh-derive/src/enum_schema.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<C: Eq, W> borsh::BorshSchema for A<C, W>
where
    W: Hash,
    W: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![< W > ::declaration()];
        format!(r#"{}<{}>"#, "A", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        struct ABacon;
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        struct AEggs;
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        struct ASalad<C: Eq>(Tomatoes, #[borsh_skip] C, Oil);
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        struct ASausage<W>
        where
            W: Hash,
        {
            wrapper: W,
            filling: Filling,
        }
        <ABacon as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <AEggs as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <ASalad<C> as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <ASausage<W> as borsh::BorshSchema>::add_definitions_recursively(definitions);
        let variants = borsh::__private::maybestd::vec![
            ("Bacon".to_string(), < ABacon > ::declaration()), ("Eggs".to_string(), <
            AEggs > ::declaration()), ("Salad".to_string(), < ASalad < C > >
            ::declaration()), ("Sausage".to_string(), < ASausage < W > > ::declaration())
        ];
        let definition = borsh::schema::Definition::Enum {
            variants,
        };
        Self::add_definition(Self::declaration(), definition, definitions);
    }
}

